--- a/code.ipynb
+++ b/code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c60df60e",
+   "id": "0920bd82",
    "metadata": {},
    "source": [
     "# Market Basket Analysis Parameters\n",
@@ -11,13 +11,13 @@
     "##### I used Two packages for comapre the performance and build my web applcation of  'Market Basket Analysis Parameters'\n",
     "### This just The notebook there is the flask web application\n",
     "\n",
-    "<a href=\"marwaneDa\"> MarwaneData.com"
+    "<a href=\"marwaneData.com\"> MarwaneData.com"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0a545bd7",
+   "id": "7b46178f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "95ae1ce3",
+   "id": "25e0f2f6",
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5c9f901e",
+   "id": "210bc1b2",
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "cc8ea789",
+   "id": "f75b2e03",
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a40bb2f7",
+   "id": "8dc68679",
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b3080b36",
+   "id": "7544e1d6",
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6f6ab910",
+   "id": "0bb01f15",
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3109c307",
+   "id": "297403e8",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "161a6f59",
+   "id": "d6293926",
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "33942a5e",
+   "id": "f84bbb77",
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "53316912",
+   "id": "de4b592c",
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "336fbf81",
+   "id": "f8524742",
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +800,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "cdce4076",
+   "id": "5414bb9b",
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +914,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b17e8385",
+   "id": "b9725183",
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5e3a972",
+   "id": "1a4c2a6a",
    "metadata": {},
    "source": [
     "### The End\n",
